@@ -1,6 +1,5 @@
 package de.kifo.commands.music;
 
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import com.sedmelluq.discord.lavaplayer.player.AudioPlayer;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
@@ -91,7 +90,7 @@ public class SkipCommand extends CommandBase {
     }
 
     @Override
-    public List<OptionData> getOptions() {
-        return ImmutableList.of(new OptionData(INTEGER, "index", "Index des Liedes, welches übersprungen werden soll", false, true));
+    public @NotNull List<OptionData> getOptions() {
+        return List.of(new OptionData(INTEGER, "index", "Index des Liedes, welches übersprungen werden soll", false, true));
     }
 }
